<?xml version="1.0" encoding="UTF-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
  <string name="menu_help">Help</string>
  <string name="menu_home">Home</string>
  <string name="menu_settings">Settings</string>
  <string name="menu_search_in_text">Find in page</string>
  <string name="bookmarks">Bookmarks</string>
  <string name="menu_random_page">Random page</string>
  <string name="menu_read_aloud">Read aloud</string>
...
  <string name="space_available" tools:keep="@string/space_available">Space Available:</string>
  <string name="move_no_space">Insufficient space to move/copy.</string>
  <string name="zim_simple">Simple</string>
  <string name="zim_no_pic">No Pictures</string>
  <string name="zim_no_vid">No Videos</string>
  <string name="no_network_connection" tools:keep="@string/no_network_connection">No network connection</string>
  <string name="help_2">What does Kiwix do?</string>
  <string name="help_3">Kiwix is an offline content reader. It acts very much like a browser but instead of accessing online web pages, it reads content from a file in ZIM format.</string>
  <string name="help_4">While Kiwix has been originally designed to provide Wikipedia offline, it also reads other contents.</string>
  <string name="help_5">Where is the content?</string>
  <string name="help_6">Our content is hosted on the Kiwix website.</string>
  <string name="help_7">They are available as ZIM files. There are a lot of them:</string>
  <string name="help_8">• Wikipedia is available separately for each language</string>
  <string name="help_9">• Other contents like Wikileaks or Wikisource are also available</string>
  <string name="help_10">You can either download your chosen ZIM files in-app or carefully select the one(s) you want and download from a Desktop computer before transferring the ZIM files to your SD card.</string>
  <string name="help_11">ZIM files download in-app are located in the external storage directory in a folder entitled Kiwix.</string>
...
  <string name="shortcut_disabled_message">Shortcut not available</string>
  <string name="new_tab_shortcut_label">New tab</string>
  <string name="get_content_shortcut_label" tools:keep="@string/get_content_shortcut_label">Get content</string>
  <string name="fav_icon">Favicon</string>
  <string name="articleCount" tools:keep="@string/articleCount">%s articles</string>
  <string name="mediaCount" tools:keep="@string/mediaCount">%s medias</string>
  <string name="get_started" tools:keep="@string/get_started">Get started</string>
  <string name="download_books">Download books</string>
  <string name="humankind_knowledge" tools:keep="@string/humankind_knowledge">Humankind\’s knowledge, on your phone.</string>
  <string name="welcome_to_the_family" tools:keep="@string/welcome_to_the_family">Welcome to the family</string>
  <string name="save_books_offline" tools:keep="@string/save_books_offline">Save books offline</string>
  <string name="download_books_message" tools:keep="@string/download_books_message">Download books and read wherever you are.</string>
  <string name="save_books_in_desired_storage">Save books in desired storage</string>
...
  <string name="go_to_next_page">Go to next page</string>
  <string name="table_of_contents">Table of contents</string>
  <string name="select_language" tools:keep="@string/select_language">Select language</string>
  <string name="save_languages" tools:keep="@string/save_languages">Save languages</string>
  <string name="all_languages" tools:keep="@string/all_languages">All languages</string>
  <string name="no_language_available" tools:keep="@string/no_language_available">No languages available</string>
  <string name="expand">Expand</string>
  <string name="history">History</string>
  <string name="history_from_current_book">View History From All Books</string>
  <string name="search_history">Search history</string>
  <string name="selected_items" tools:ignore="PluralsCandidate">%1$d selected</string>
  <string-array name="description_help_2">
    <item>@string/help_3</item>
...
