...
  android:background="?attr/listBackground"
  android:fitsSystemWindows="true"
  tools:context=".help.HelpActivity"
  >

  <com.google.android.material.appbar.AppBarLayout
    android:id="@+id/activity_help_appbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/AppTheme.AppBarOverlay"
    app:layout_constraintTop_toTopOf="parent"
    >

    <androidx.appcompat.widget.Toolbar
      android:id="@+id/activity_help_toolbar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:theme="@style/AppTheme.AppBarOverlay"
      app:popupTheme="@style/AppTheme.PopupOverlay"
      />
  </com.google.android.material.appbar.AppBarLayout>
...
    app:layout_constraintTop_toBottomOf="@id/activity_help_appbar"
    app:layout_constraintStart_toStartOf="parent"
    app:srcCompat="@drawable/ic_feedback_blue_24dp"
    />

  <TextView
    android:id="@+id/activity_help_feedback_text_view"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:drawablePadding="@dimen/activity_horizontal_margin"
    android:text="@string/send_feedback"
    android:textAppearance="?android:attr/textAppearanceMedium"
    app:layout_constraintBottom_toBottomOf="@id/activity_help_feedback_image_view"
...
    android:layout_height="1dp"
    android:background="?android:attr/listDivider"
    app:layout_constraintTop_toBottomOf="@id/activity_help_feedback_image_view"
    />

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/activity_help_recycler_view"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
...
