<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:paddingStart="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/dimen_medium_padding"
  android:paddingEnd="@dimen/activity_horizontal_margin"
  android:paddingBottom="@dimen/dimen_medium_padding">

  <TextView
    android:id="@+id/item_help_title"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:gravity="start|center"
    android:minHeight="@dimen/material_minimum_height_and_width"
    android:textAppearance="?textAppearanceHeadline6"
    app:layout_constraintEnd_toStartOf="@id/item_help_toggle_expand"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:text="@string/help_2" />

  <ImageView
    android:id="@+id/item_help_toggle_expand"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:contentDescription="@string/expand"
    android:minWidth="@dimen/material_minimum_height_and_width"
    android:minHeight="@dimen/material_minimum_height_and_width"
    android:scaleType="centerInside"
    android:src="@drawable/action_find_next"
    app:layout_constraintBottom_toBottomOf="@id/item_help_title"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="@id/item_help_title"
    app:tint="?colorOnSurface" />

  <TextView
    android:id="@+id/item_help_description"
    style="@style/list_item_body"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:autoLink="web"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:textColor="?textSecondary"
    android:visibility="gone"
    app:layout_constraintTop_toBottomOf="@id/item_help_title"
    tools:text="@string/help_3"
    tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>
